<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:padding="8dp"
    android:paddingBottom="16dp">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
        <EditText
                android:id="@+id/editTextEmail"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent"
                android:editable="false">
        </EditText>
        <EditText
                android:id="@+id/editTextFirstName"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:editable="false">
        </EditText>
        <EditText
                android:id="@+id/editTextLastName"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:editable="false" >
        </EditText>
        <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:layout_width="fill_parent"
                android:editable="false" >
        </EditText>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:entries="@array/gender_names"
                />

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/birth_date"
                android:inputType="date"
                android:id="@+id/birth_date"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_weight"
                android:text=""
                android:inputType="number"
                android:id="@+id/weight"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_height"
            android:text=""
            android:inputType="number"
            android:id="@+id/height"/>
    </LinearLayout>
</ScrollView> 