<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cardiomood.heartrate.android.FirstInputPersonalDataActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="10">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to_cardio_mood"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/specify_your_personal_information"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />
                </LinearLayout>
                <ImageView
                    android:layout_width="96dp"
                    android:padding="8dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/img_cardiomood_logo_notext"
                    android:scaleType="centerInside" />
            </LinearLayout>

            <fragment
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                class="com.cardiomood.android.tools.fragments.ProfileFragment"
                tools:layout="@layout/fragment_profile"
                android:id="@+id/fragment_profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_may_skip_this"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/button_skip"
                    android:id="@+id/button_skip"
                    android:clickable="true"
                    android:linksClickable="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="39dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_continue"
                    android:text="@string/button_continue"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
